--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,12 @@
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.1",
-    "@mui/material": "^5.2.3",
+    "@mui/material": "^5.2.6",
+    "@mui/styles": "^5.2.3",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "yarn": "^1.22.17"
   },
   "devDependencies": {
     "eslint": "8.5.0",
