--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@mui/icons-material": "^5.2.1",
     "@mui/material": "^5.2.3",
     "next": "12.0.7",
+    "node-sass": "^6.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
