--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,13 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-session": "^1.17.2",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongoose": "^6.0.5",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "passport": "^0.5.2",
+    "passport-google-oauth2": "^0.2.0"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
