.env variables updated

--- a/server/.env.dev
+++ b/server/.env.dev
@@ -1,1 +1,3 @@
-MONGO_URL=mongodb://localhost/tap
+MONGO_URL=mongodb+srv://Abhinav:abhinav123@nodejsproject.pwxex.mongodb.net/abhinavjwt?retryWrites=true&w=majority
+
+JWT_SECRET=processxxkjsvbdk454163envJWT_SECRETdgsjkggln
