--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,11 @@
     "@mui/icons-material": "^5.2.1",
     "@mui/material": "^5.2.6",
     "@mui/styles": "^5.2.3",
+    "@reduxjs/toolkit": "^1.8.1",
     "next": "^12.1.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.8",
     "yarn": "^1.22.17"
   },
   "devDependencies": {
